- Finder : added a contextual menu (right mouse button to copy, move, delete and backup bases).
- updated swedish translation (thanks to Hans Eriksson)
- Added the scanning of filter files (.sso) from the command line (i.e. scid mydb myfilter, scid opens immediatly with mydb filtered by myfilter file)
- Tuned the startup communication between scid and engines
- Rybka 3 supported despite a small bug in its command line parser
- Scid-engine log files: maxsize to 5000 lines (was 500) and flush on every put (to aid problem detection when an engine crashes)
- Training - Serious game : 
   * UCI options of engines are now sent, so if an engine has for example an UCI_Elo present and set up, playing a serious game will be done in fact with a weakened engine (then similar to Tactical game that is designed solely for Phalanx usage).
   * added a "Configure engine" button to tweak an engine before playing (style, strength for example)
- UCI engine configuration : spinbox entries are now user writable (a check is done to ensure input is correct) and UCI checkbox is ON by default when creating a new engine entry
- UCI engine output :
  * display mate indicator in multi variations (M5 instead of +327.00) (thanks to Benigno Hernández)
  * added move numbers in multi variation lines
- Tree window : added the ability to view a tree through a mask (or layer) that contains user defined data (NAG codes, color markers, comments)
  * visible only if a Mask file (*.msk) is opened
  * the mask can be automatically with a game (as much data as possible will be imported, like variations, NAG codes, comments)
- Tree window : scores are highlighted when the moves have good or bad results
- updated spanish translation (thanks to Benigno Hernández)
- support for online endgame tablebases (up to 6 men tablebases)